# Kromek

./: CMakeLists.txt  StandardSetup.cmake
ConsoleExample/: CMakeLists.txt  console.cpp
KromekDriver/: CMakeLists.txt
KromekDriver/src/: D3DataProcessor.cpp
SpectrometerDriver/: CMakeLists.txt  SpectrometerData.h
SpectrometerExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
